# bdk-wasm

./: CHANGELOG.md  Cargo.toml
src/: lib.rs
src/bitcoin/: tx_builder.rs  wallet.rs
src/types/: error.rs
tests/: web.rs
tests/node/integration/: wallet.test.ts
