[package]
name = "bdk-wasm"
version = "0.1.0"
edition = "2018"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-wasm"
description = "A WASM version of the BDK library for use in Javascript apps"
keywords = ["bitcoin", "wallet", "descriptor", "psbt", "wasm"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
bdk = { version = "0.17", default-features = false, features = ["use-esplora-reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
web-sys = { version = "0.3.57", features = ['console'], optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
