[package]
name = "bitcoindevkit"
version = "0.2.0"
repository = "https://github.com/bitcoindevkit/bdk-wasm"
description = "A modern, lightweight, descriptor-based wallet library in WebAssembly for browsers and Node"
keywords = ["bitcoin", "descriptor", "wasm", "browser", "node"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Bitcoin Developers"]
edition = "2021"
rust-version = "1.83"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
esplora = ["bdk_esplora", "wasm-bindgen-futures"]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = { version = "0.4.64", optional = true }
anyhow = { version = "1.0.102", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.91", default-features = false, features = [
    "Window",
] }

# Compatibility to compile to WASM
getrandom = { version = "0.2.17", features = ["js"] }

# Bitcoin dependencies
bdk_wallet = { version = "2.3.0" }
bdk_esplora = { version = "0.22.1", default-features = false, features = [
    "async-https",
], optional = true }
bitcoin = { version = "0.32.8", default-features = false, features = [
    "secp-lowmemory",
] }

# Debug dependencies
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.64"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
